--- a/exercises/html_css_exercise_1a/index.html
+++ b/exercises/html_css_exercise_1a/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <section id="box">
-            <h1>WELCOME BACK</h1>
-            <p>Sign In</p>
-            <form class="SignIn" action="index.html" method="post">
-              <input type="email" name="email" placeholder="Email">
-              <br>
-              <input type="password" name="password" placeholder="Password">
-                <a id="forgotPassword" href="">Forgot?</a>
-              <br>
-              <input id="submit" type="submit" name="submit" value="Submit">
-              <br>
-              <a id="noAccount" href="">I don't have an account</a>
-            </form>
-          </section>
-        
-        <script src="" async defer></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <section id="box">
+      <h1>WELCOME BACK</h1>
+      <p>Sign In</p>
+      <form class="SignIn" action="index.html" method="post">
+        <input type="email" name="email" placeholder="Email" />
+        <p>
+          <input type="password" name="password" placeholder="Password" />
+          <a id="forgotPassword" href="">Forgot?</a>
+        </p>
+        <p>
+          <button type="button" id="submit" value="Submit" name="submit">Submit</button>
+        </p>
+        <a id="noAccount" href="">I don't have an account</a>
+      </form>
+    </section>
+
+    <script src="" async defer></script>
+  </body>
 </html>
