Updated html with note codes

--- a/css_fun/music_notes/index.html
+++ b/css_fun/music_notes/index.html
@@ -20,15 +20,15 @@
             <div class="note7">&#119133;</div>
             <div class="note8">&#119086; &#9833;</div>
         </section>
-        <!-- <div id="sharp">&#9839;</div>
-        <div id="flat">&#119084;</div>
-        <div id="natural">&#119086;</div>
-        <div id="double-eighth-note">&#9835;</div>
-        <div id="quarter-note">&#9833;</div>
-        <div id="eighth-note">&#9834;</div>
-        <div id="half-note">&#119134;</div>
-        <div id="whole-note">&#119133;</div>
-        <div id="treble-clef">&#119070;</div>
-        <div id="bass-clef">&#119074;</div> -->
+        <!--"sharp" &#9839;
+        "flat" &#119084;
+        "natural" &#119086;
+        "double-eighth-note" &#9835;
+        "quarter-note" &#9833;
+        "eighth-note" &#9834;
+        "half-note" &#119134;
+        "whole-note" &#119133;
+        "treble-clef" &#119070;
+        "bass-clef" &#119074; -->
     </body>
 </html>
